# C-Fast-Math-Library

./: CMakeLists.txt  README.md
include/cfm/: math.h
src/cfm/: __aarch64_sincos.h  __aarch64_tan.h  acos.c  acosh.c  asin.c  asinh.c  atan.c  atan2.c  atanh.c  cbrt.c  ceil.c  copysign.c  cos.c  cosh.c  drem.c  erf.c  erfc.c  exp.c  exp2.c  fabs.c  fdim.c  float_bits.h  floor.c  fma.c  fmod.c  frexp.c  hypot.c  ilogb.c  inf.c  ldexp.c  lgamma.c  log.c  log2.c  logb.c  nan.c  pow.c  round.c  scalb.c  scalbn.c  significand.c  (+8 more)
